Cria estrutura HTML do formulário de pesquisa

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 
     <!-- Header Section Ends -->
 
+    <!-- Search Form -->
+
+    <form action="" id="search-form">
+        <input type="search" name="" id="search-box">
+        <label for="search-box" class="fas fa-search"></label>
+    </form>
+
+
 
     <!--JavaScript External Links -->
     <script src="assets/js/script.js"></script>
