Cria estilo do formulário de pesquisa

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <!-- Search Form -->
 
     <form action="" id="search-form">
-        <input type="search" name="" id="search-box">
+        <input type="search" placeholder="search here..." name="" id="search-box">
         <label for="search-box" class="fas fa-search"></label>
+        <i class="fas fa-times" id="close"></i>
     </form>
 
 
