Cria estrutura HTML da section home

--- a/index.html
+++ b/index.html
@@ -47,6 +47,52 @@
         <i class="fas fa-times" id="close"></i>
     </form>
 
+    <!-- Home Section Starts -->
+
+    <section class="home" id="home">
+        <div class="home-slider">
+            <div class="wrapper">
+                <div class="slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                        <a href="#" class="btn"></a>
+                    </div>
+                    <div class="image">
+                        <img src="assets/images/home-img-1.png" alt="">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>fried chicken</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                        <a href="#" class="btn"></a>
+                    </div>
+                    <div class="image">
+                        <img src="assets/images/home-img-2.png" alt="">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>hot pizza</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                        <a href="#" class="btn"></a>
+                    </div>
+                    <div class="image">
+                        <img src="assets/images/home-img-3.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Home Section Ends -->
+
 
 
     <!--JavaScript External Links -->
