--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span>our special dish</span>
                         <h3>spicy noodles</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
-                        <a href="#" class="btn"></a>
+                        <a href="#" class="btn">order now</a>
                     </div>
                     <div class="image">
                         <img src="assets/images/home-img-1.png" alt="">
@@ -69,7 +69,7 @@
                         <span>our special dish</span>
                         <h3>fried chicken</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
-                        <a href="#" class="btn"></a>
+                        <a href="#" class="btn">order now</a>
                     </div>
                     <div class="image">
                         <img src="assets/images/home-img-2.png" alt="">
@@ -81,7 +81,7 @@
                         <span>our special dish</span>
                         <h3>hot pizza</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
-                        <a href="#" class="btn"></a>
+                        <a href="#" class="btn">order now</a>
                     </div>
                     <div class="image">
                         <img src="assets/images/home-img-3.png" alt="">
