--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!-- CSS External Links -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+
 </head>
 <body>
     
@@ -50,9 +52,9 @@
     <!-- Home Section Starts -->
 
     <section class="home" id="home">
-        <div class="home-slider">
-            <div class="wrapper">
-                <div class="slide">
+        <div class="swiper-container home-slider">
+            <div class="swiper-wrapper wrapper">
+                <div class="swiper-slide slide">
                     <div class="content">
                         <span>our special dish</span>
                         <h3>spicy noodles</h3>
@@ -64,7 +66,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide slide">
                     <div class="content">
                         <span>our special dish</span>
                         <h3>fried chicken</h3>
@@ -76,7 +78,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide slide">
                     <div class="content">
                         <span>our special dish</span>
                         <h3>hot pizza</h3>
@@ -88,6 +90,8 @@
                     </div>
                 </div>
             </div>
+
+            <div class="swiper-pagination"></div>
         </div>
     </section>
 
@@ -97,5 +101,6 @@
 
     <!--JavaScript External Links -->
     <script src="assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 </html>
